--- a/ToDoListe.css
+++ b/ToDoListe.css
@@ -7,9 +7,8 @@ body{
     width: 350px;
     margin-left: -100px;
 }
-#add{
+#btn_add{
     height: 45px;
     width: 80px;
     background-color: rgb(45, 193, 45);
-    margin-left: -5;
 }
